# evaluacion-llm-pruebas-unitarias

./: requirements.txt
exLong/exLong/: .gitignore  Dockerfile  README.md  REPLICATION.md  docker-compose.demo.yml  docker-compose.gpu.yml  docker-compose.local-ollama.yml  docker-compose.yml  pyproject.toml  requirements.txt
exLong/exLong/collector/: .gitignore  pom.xml
exLong/exLong/collector/analysis/: pom.xml
exLong/exLong/collector/core/: pom.xml
exLong/exLong/collector/rt/: pom.xml
exLong/exLong/collector/smethods/: README.md
exLong/exLong/collector/stacktrace-test/: test-st-config.json
exLong/exLong/collector/static-collector/: pom.xml
exLong/exLong/collector/util/: pom.xml
exLong/exLong/collector/utils/: pom.xml
exLong/exLong/python/: .gitignore  tasks.py
exLong/exLong/python/configs/: cli-no-name.yaml  cli-with-name.yaml  codellama-13b-conditionnestack2e-no-name-ft.yaml  codellama-13b-conditionnestack2e-with-name-ft.yaml  codellama-7b-conditionne2e-no-name-ft.yaml  codellama-7b-conditionne2e-with-name-ft.yaml  codellama-7b-conditionnestack2e-all-no-name-ft.yaml  codellama-7b-conditionnestack2e-all-with-name-ft.yaml  codellama-7b-conditionnestack2e-no-name-ft.yaml  codellama-7b-conditionnestack2e-no-name-zero-shot.yaml  codellama-7b-conditionnestack2e-sample-no-name-ft.yaml  codellama-7b-conditionnestack2e-sample-with-name.yaml  codellama-7b-conditionnestack2e-with-name-ft.yaml  codellama-7b-conditionnestack2e-with-name-zero-shot.yaml  codellama-7b-diversity-conditionnestack2e-all-with-name-ft.yaml  codellama-7b-mut2e-no-name-ft.yaml  (+7 more)
(+1400 files in other folders)
