[project]
name = "exlong-internal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.1.1",
    "datasets~=3.0.0",
    "debugpy>=1.8.12",
    "deepspeed~=0.8.0",
    "fairscale~=0.4.13",
    "fuzzywuzzy[speedup]~=0.18.0",
    "gitpython>=3.1.44",
    "javalang~=0.13.0",
    "jsonargparse>=4.36.0",
    "matplotlib>=3.10.0",
    "more-itertools~=8.6.0",
    "nltk~=3.6.7",
    "numpy~=1.25.0",
    "ollama==0.4.5",
    "openai>=1.61.1",
    "opt-einsum~=3.3.0",
    "peft==0.13.2",
    "regex>=2024.11.6",
    "rouge~=1.0.1",
    "scikit-learn~=1.1.1",
    "seutil>=0.8.2",
    "spdx-lookup~=0.3.3",
    "thefuzz~=0.22.1",
    "tiktoken~=0.7.0",
    "tqdm>=4.67.1",
    "traitlets==5.14.3",
    "transformers~=4.44.0",
    "tree-sitter>=0.24.0",
]
